--- a/CodeOrganizer/Resources/PCHData.resx
+++ b/CodeOrganizer/Resources/PCHData.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="stdafx_cpp" xml:space="preserve">
     <value>// stdafx.cpp : source file that includes just the standard includes
@@ -134,6 +134,11 @@
 //
 #ifndef __$$ProjectName$$_STDAFX_H_INCLUDED__
 #define __$$ProjectName$$_STDAFX_H_INCLUDED__
+
+#define WIN32_LEAN_AND_MEAN		// Exclude rarely-used stuff from Windows headers
+// Common includes
+#include "Common Files/ENGINE2 CLASS/defs.h"
+
 // TODO: reference additional headers your program requires here
 
 #endif //__$$ProjectName$$_STDAFX_H_INCLUDED__</value>
